Added catalogs of the different resources.
