# src/routes/testcaseRoutes.ts
@@ -2,6 +2,8 @@ import express from "express";
 import * as controller from "../controllers/testcaseController";
 
 const router = express.Router();
+
+router.get("/catalog", controller.getTestcaseCatalog)
 router.get("/:id/medical", controller.getTestcaseMedicalById);
 router.get("/:id", controller.getTestcaseById);
 router.get("/", controller.getTestcases);
